# Groupe8

./: .gitignore  Taskfile.yml  docker-compose.yml  package-lock.json  package.json
code/backend/: tmp
code/backend/Authentification/: Cargo.toml  Dockerfile
code/backend/Authentification/certificatSSL/autosigned/: localhost.pem
code/backend/Authentification/src/: main.rs
code/backend/Authentification/src/api/: app_state.rs  login.rs  logout.rs  mod.rs  refresh.rs  refreshtoken.rs  register.rs
code/backend/Authentification/src/api/oAuth/: callback.rs  get_url.rs  mod.rs
code/backend/User/: Cargo.toml  Dockerfile
code/backend/article/: index.ts  package.json  script.sql
code/backend/authenticate/: index.ts  package-lock.json  package.json  script.sql  tsconfig.json
code/backend/formation/: app.js  index.ts  package-lock.json  package.json  script.sql
code/backend/formations/: app.js  package-lock.json  package.json
code/backend/offres/: index.ts  script.sql
code/backend/user/: index.ts  package.json  script.sql
code/frontend/App/: app_nginx.conf  package-lock.json  package.json  webpack.config.js
code/frontend/Authentification/: Dockerfile  auth_nginx.conf  package-lock.json  package.json  webpack.config.js
code/frontend/Component/: Dockerfile  package-lock.json  package.json  webpack.config.js
code/frontend/Formation/: Dockerfile  formation_nginx.conf  nginx.conf  package-lock.json  (+2 more)
config/taskfiles/: dev.yml  prod.yml
infra/krakend/: Dockerfile
infra/reverse_proxy/: .nginx.conf  Dockerfile  nginx.conf
script/config/: Host.sh
(+186 files in other folders)
