[package]
name = "Authentification"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3.0.0"
tokio = { version = "0.2.0", features = ["full"] }
mongodb = "1.0"
bcrypt = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = "2.0"
jsonwebtoken = "8.1"
futures = "0.3"
actix-cors = "0.5.0"
cookie = "0.14"