[package]
name = "Authentification"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
mongodb = "3.0.1"
bcrypt = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.1"
futures = "0.3"
actix-cors = "0.7.0"
cookie = "0.18.1"
reqwest = { version = "0.11", features = ["json"] }